fix: close Task 6 security review blockers